# beto-framework

./: .gitignore  BETO_INSTRUCTIVO.md  CHANGELOG.md  DOCUMENTACION_OFICIAL_BETO.md  LICENSE  LINK_AUDIT.md  README.md  VERSION_NOTE.md
beto_executor/: PENDING_IMPROVEMENTS.md  run_duplicate_finder.sh  run_duplicate_finder_test.sh
beto_executor/src/: main.py  test_injector.py  test_paso10.py
docs/: architecture.md  claims-and-boundaries.md  faq.md  persistence-migration-plan.md  quickstart.md  related-work.md  verification.md
examples/beto-blender-mcp/: README.md
examples/beto-evo2/: FAQ.md  README.md  resultado_real.json
examples/beto_executor_self_specification/: BETO_CORE_DRAFT.md  BETO_SYSTEM_GRAPH.md  CIERRE_ASISTIDO.md  GENERATOR_RULES_BETO_EXECUTOR.md  MANIFEST_PROYECTO.md  PASO_0_EVALUACION.md
examples/duplicate_file_finder/: BETO_CORE_DRAFT.md  BETO_SYSTEM_GRAPH.md  (+17 more)
examples/repeated_log_monitor/materialized/: pyproject.toml
examples/repeated_log_monitor/materialized/src/repeated_log_monitor/: __init__.py  alerts.py  config.py  detector.py  main.py  models.py  monitor.py
framework/: AMBIGUITY_RESIDUE_REPORT.md  BETO_CORE_INTERVIEW.md  BETO_SYSTEM_GRAPH_TEMPLATE.md  CHANGE_REPORT.md  EXECUTION_INTENT_MAP.md  EXECUTION_ROUTER.md  FRAMEWORK_FEEDBACK_TEMPLATE.md  IMPLEMENTATION_CONTRACT_TEMPLATE.md  LOCAL_EXECUTION_CONTEXT.md  MANIFEST_BETO_TEMPLATE.md  MANIFEST_PROYECTO_TEMPLATE.md  OPERATIONAL_LESSONS_TEMPLATE.md  PHASE_TEMPLATE.md  ROUTE_PROMOTION_RECORD.md
research/: BETO_Framework_Technical_Article.docx  BETO_Framework_Technical_Article.md
(+96 files in other folders)
