[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repeated-log-monitor"
version = "0.1.0"
description = "Lightweight Linux log monitor for repeated error detection."
requires-python = ">=3.10"

[project.scripts]
repeated-log-monitor = "repeated_log_monitor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
